# Rust-Web-Server

./: .env  Cargo.toml
src/: main.rs
src/controllers/: contact_controller.rs  mod.rs  post_controller.rs  product_controller.rs
src/database/: mod.rs
src/models/: contact.rs  mod.rs  post.rs  product.rs
