[package]
name = "rust_web"
version = "0.1.0"
authors = ["Ruannilton <ruannilton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="*"
mongodb = "1.1.1"
tokio = "1.0.1"
dotenv = "0.15.0"
env_logger = "0.8.2"
bson = "1.1.0"
serde = "1.0.103"
futures = "0.3.4"
serde_json = "*"